--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
         }
     ],
     "require": {
-        "illuminate/database": "^8.0|^9.0|^10.0|^11.0",
-        "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
+        "php": "^8.3",
+        "illuminate/database": "^10.0|^11.0|^12.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
         "ramsey/uuid": "^4.1.1"
     },
     "minimum-stability": "stable",
